[package]
name = "enum-str-derive"
version = "0.1.3"
authors = ["enzi <enzi@braindead.io>"]
keywords = ["enum", "macro", "string", "serde", "postgres"]
description = "A crate to serialize/deserialize enums into/from a string."
edition = "2021"
license = "MIT"
repository = "https://github.com/enzious/enum-str-derive"
include = ["/src", "/README.md", "/LICENSE.md", "/crates-io.md"]
readme = "crates-io.md"
documentation = "https://docs.rs/enum-str-derive"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "1.0.107", features = ["extra-traits"] }

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
serde = "1.0"
bytes = "1.4"
postgres-types = "0.2"
postgres-protocol = "0.6"

[features]
default = []

postgres = []
serde = []
